Page MenuHome GnuPG

Kleopatra: Email address of CA is not set as recipient when sending new CSR by email
Closed, ResolvedPublic

Description

Prerequisites:
The email address of the CA is specified in the configuration file, e.g.

[CertificateCreationWizard]
CAEmailAddress=ca@example.net

How to reproduce:

  • Create a new X.509 key pair and certification request.
  • On the result page select Send Certificate Request By EMail

Expected result:

  • The email client shows a window for composing a message with the recipient field (To) prefilled with the configured email address of the CA.

Actual result:

  • The recipient field is empty.

Event Timeline

ikloecker triaged this task as Normal priority.
ikloecker created this task.
ikloecker added a project: Restricted Project.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker changed the task status from Open to Testing.Jun 3 2022, 2:47 PM
ikloecker removed ikloecker as the assignee of this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker added a project: Restricted Project.
werner removed a project: Restricted Project.Sep 22 2022, 10:55 AM
ebo claimed this task.
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ebo added a subscriber: ebo.

This works on Linux with KMail and with Claws (although with Claws the attachment is added twice).

On Windows with Outlook the recipient is inserted. The attachment is not added, but that is a known issue.