Fix invoking email client with given recipient address

This fixes a regression introduced almost 6 years ago.

Fixes-commit: 60dc0bc4d6449e384d88a8e398261e1bb98f0a04

GnuPG-bug-id: 6013